# datasetter

./: DISCLAIMER.md  LICENSE  PRIVACY.md  README.md  SETUP.md  TERMS.md  package.json
datasetter_fixed/: DISCLAIMER.md  NOTICE
datasetter_fixed/src-py/agents/: analyser.py  interpreter.py  researcher.py  verifier.py
datasetter_fixed/src-py/core/: config_agent.py  models.py  optimizations.py
datasetter_fixed/src-py/utils/: hardware.py  linter.py
datasetter_fixed/src-tauri/src/: commands.rs
datasetter_fixed/src-ui/src/components/: index.tsx
datasetter_fixed/src-ui/src/hooks/: index.ts
datasetter_fixed/src-ui/src/lib/: api.ts
datasetter_fixed/src-ui/src/screens/: WorkspaceScreen.tsx
datasetter_fixed/src-ui/src/store/: index.ts
src-py/: main.py
src-py/agents/: fixer.py  generator.py  orchestrator.py  scripter.py
src-py/core/: litellm_router.py
src-py/utils/: events.py  storage.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: index.html  package.json  vite.config.ts
src-ui/src/: App.tsx  index.css  main.tsx
src-ui/src/lib/: agents.ts
src-ui/src/screens/: NewProjectScreen.tsx  OtherScreens.tsx
src-ui/src/types/: index.ts
