[package]
name = "datasetter"
version = "0.1.0"
description = "AI-augmented dataset generation and verification"
authors = ["blueplaysgames3921"]
edition = "2021"

[lib]
name = "datasetter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog      = "2"
tauri-plugin-fs          = "2"
tauri-plugin-shell       = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
reqwest                  = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
opt-level  = "s"   # Optimise for binary size — Rust shell stays small
strip      = true
lto        = true
panic      = "abort"
